flux/apps/base/hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ingressClassName: cilium
  rules:
  - host: app1.k8s.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
  # Uncomment the lines below if you have TLS/SSL configured
  # tls:
  # - hosts:
  #   - hello.local
  #   secretName: hello-world-tls
